# AlphaToRoto

./: CMakeLists.txt  LICENCE  LICENCE.md  LICENSING.md  README.md  building_step_by_step.txt
COMPILED/MAC/: CMakeLists.txt
COMPILED/MAC/15.0/: AlphaToRoto.dylib
COMPILED/MAC/15.1/: AlphaToRoto.dylib
COMPILED/MAC/15.2/: AlphaToRoto.dylib
COMPILED/MAC/16.0/: AlphaToRoto.dylib
COMPILED/MAC/16.1/: AlphaToRoto.dylib
COMPILED/MAC/17.0/: AlphaToRoto.dylib
COMPILED/WIN/: CMakeLists.txt
Python/NO_NUMPY/: alphaToRoto_py.py
Python/NUMPY/: alphaToRoto_py.py
src/: AlphaToRoto.cpp
